--- a/client/index.html
+++ b/client/index.html
@@ -7,10 +7,18 @@
       href="src/images/image_processing20200510-6203-hrzrg2.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
     <title>GameWare</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="src/index.jsx"></script>
+    <script
+      src="https://kit.fontawesome.com/65b1b5ea55.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
