--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      href="src/images/image_processing20200510-6203-hrzrg2.png"
-    />
+    <link rel="icon" href="./src/images/weblogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
